--- a/templates/_speech_log_modal.html
+++ b/templates/_speech_log_modal.html
@@ -80,7 +80,7 @@
                 </tr>
             </table>
             <div class="form-actions">
-                <button type="submit" class="btn btn-success">Save</button>
+                <button type="submit" class="btn btn-primary">Save</button>
                 <button type="button" class="btn btn-danger" onclick="closeSpeechLogModal()">Cancel</button>
             </div>
         </form>
