--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
         </div>
         {% else %}
         <div class="logout-container">
-            <a href="{{ url_for('main_bp.login') }}" style="background-color: #28a745;">
+            <a href="{{ url_for('main_bp.login') }}" style="btn-primary;">
                 <i class="fas fa-sign-in-alt"></i>
                 <span>Login</span>
             </a>
