--- a/templates/login.html
+++ b/templates/login.html
@@ -11,15 +11,6 @@
     <div class="login-container">
         <img src="{{ url_for('static', filename='images/SHLTMC-logo.png') }}" alt="SHLTMC Logo" style="width: 150px; margin-bottom: 20px;">
         <h1>VPE Master Login</h1>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                <ul class="flash-messages">
-                    {% for category, message in messages %}
-                        <li class="{{ category }}">{{ message }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
-        {% endwith %}
         <form action="{{ url_for('main_bp.login') }}" method="post" class="login-form">
             <div>
                 <label for="username">Username:</label>
@@ -30,11 +21,11 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <div>
-                <button type="submit" class="btn btn-success">Login</button>
+                <button type="submit" class="btn btn-primary" style="height: 40px;">Login</button>
             </div>
         </form>
         <div class="guest-login" style="text-align: center; margin-top: 15px;">
-            <a href="{{ url_for('agenda_bp.agenda') }}">Continue as Guest</a>
+            <a href="{{ url_for('agenda_bp.agenda') }}" style="text-decoration: none;">Continue as Guest</a>
         </div>
     </div>
 </body>
